# gb-save-patcher

./: .gitignore  Cargo.toml  LICENSE  README.md  categories.txt
.github/workflows/: ci.yml
crates/gb-save-cli/: Cargo.toml
crates/gb-save-cli/src/: lib.rs
crates/gb-save-core/: Cargo.toml
crates/gb-save-core/src/: checksum.rs  error.rs  lib.rs  patch_framework.rs  remap.rs  save_binary.rs  symbol_database.rs  types.rs
crates/gb-save-web/: Cargo.toml
crates/gb-save-web/src/: js.rs  lib.rs
crates/gb-save-web/www/: README.md  config.js  index.html  main.js  styles.css
docs/: template-integration.md  web-log-css-contract.md
examples/gb-save-game-template/: Cargo.toml  README.md
examples/gb-save-game-template/src/: fixes.rs  game.rs  lib.rs  main.rs  patcher.rs  symbols.rs  validation.rs  wasm.rs
examples/gb-save-game-template/src/migrations/: mod.rs  v1_to_v2.rs  v2_to_v3.rs
tools/: web_dev.ps1
