[package]
name = "gb-save-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

description = "Game-agnostic CLI shell for Game Boy save patching."

[dependencies]
anyhow.workspace = true
clap.workspace = true
gb-save-core = { path = "../gb-save-core" }
serde_json.workspace = true
