[package]
name = "gb-save-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

description = "Core primitives for Game Boy save patching (byte access, addressing, errors)."

[dependencies]
thiserror.workspace = true
flate2.workspace = true
