[package]
name = "gb-save-game-template"
version = "0.0.0"
edition = "2021"
publish = false

description = "Holistic example game crate showing how to integrate gb-save-cli and gb-save-web."

[dependencies]
anyhow = "1"
gb-save-cli = { path = "../../crates/gb-save-cli" }
gb-save-core = { path = "../../crates/gb-save-core" }
gb-save-web = { path = "../../crates/gb-save-web" }

[lib]
crate-type = ["rlib", "cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
